--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,53 +1,28 @@
 <div class="bg-primary border border-dark">
   
-    <h1 class="text-center text-uppercase fs-1 ">Jhoanna Elaine Erika Cuizon</h1>
+    <h1 class="text-center text-uppercase fs-1 ">My Personal Website</h1>
 
-  
 </div>
 
 <div class="container">
-  <h2>Educational Background</h2>
   <br>
   <div class="row">
-	  <div class="col-xs-3">
+      <div class="col-xs-4">
       <div class="card" style="width: 18rem;">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8e/Makati_City.svg/2048px-Makati_City.svg.png" class="card-img-top" alt="..." style="width: 200px;">
-        <div class="card-body">
-          <h5 class="card-title">Maximo Estrella Elementary School</h5>
-          <p class="card-text">2015</p>
-          <a href="#" class="btn btn-primary">Visit</a>
-        </div>
+        <app-personalinfo></app-personalinfo>
       </div>
     </div>
-	  <div class="col-xs-3">
+      <div class="col-xs-4">
       <div class="card" style="width: 18rem;">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8e/Makati_City.svg/2048px-Makati_City.svg.png" class="card-img-top" alt="..." style="width: 200px;">
-        <div class="card-body">
-          <h5 class="card-title">General Pio Del Pilar National HighSchool</h5>
-          <p class="card-text">2019</p>
-          <a href="#" class="btn btn-primary">Visit</a>
-        </div>
+        <app-contactinfo></app-contactinfo>
       </div>
     </div>
-	  <div class="col-xs-3">
+      <div class="col-xs-4">
       <div class="card" style="width: 18rem;">
-        <img src="https://upload.wikimedia.org/wikipedia/en/c/c9/Santa_Isabel_College_logo.png" class="card-img-top" alt="..." style="width: 200px;">
-        <div class="card-body">
-          <h5 class="card-title">Santa Isabel College of Manila</h5>
-          <p class="card-text">2021</p>
-          <a href="#" class="btn btn-primary">Visit</a>
-        </div>
+        <app-work></app-work>
       </div>
     </div>
-    <div class="col-xs-3">
-      <div class="card" style="width: 18rem;">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Logo_of_Colegio_de_San_Juan_de_Letran-Calamba.png" class="card-img-top" alt="..." style="width: 200px;">
-        <div class="card-body">
-          <h5 class="card-title">Colegio de San Juan de Letran</h5>
-          <p class="card-text">Current</p>
-          <a href="#" class="btn btn-primary">Visit</a>
-        </div>
-      </div>
+
     </div>
-	</div>
 </div>
+<app-educbg></app-educbg>
